# model-uploader

./: .gitignore  Untitled.ipynb  app.py  app.sh  endpoint_registration.py  model_registration.py  pyproject.toml  requirements.txt  security_scan.py  setup.py
.Trash-12574/files/: Untitled.ipynb
.Trash-12574/info/: Untitled.ipynb.trashinfo  untitled.txt.trashinfo
.ipynb_checkpoints/: app-checkpoint.py  app-checkpoint.sh
helpers/: create_model_for_upload.ipynb  inference.py  metadata.json  model.pkl  requirements.txt  run_all.py
helpers/artifacts/: requirements.txt  signature.pkl
helpers/monitoring_data/: ground_truth.csv  schema.json  training_data.csv
localapp.egg-info/: PKG-INFO  SOURCES.txt
static/css/: style.css
static/css/.ipynb_checkpoints/: style-checkpoint.css
static/js/: main.js
static/js/.ipynb_checkpoints/: main-checkpoint.js
templates/.ipynb_checkpoints/: index-checkpoint.html
